# AI_english_learning_app_mvp

./: .coverage  .env.example  .gitignore  README.md  audio_sample.py  database_schema.txt  docker-compose.yml  issue2_implementation_summary.md  issue3_implementation_summary.md  issue5_implementation_summary.md  issue6_implementation_summary.md  summary.txt
apps/api/: .coverage  .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_add_saved_phrases_table.py  cb85777a681d_add_total_points_to_users.py  de2f65f52dd9_add_streak_fields_to_users.py  ef1a2b3c4d5e_add_is_pro_to_users.py  f10000000001_create_core_tables.py  f20000000001_migrate_user_id_to_uuid.py  g10000000001_create_shadowing_tables.py  h10000000001_create_custom_scenarios_table.py  h10000000002_make_scenario_id_nullable.py  i10000000001_add_review_item_source_metadata.py  j10000000001_add_instant_translation_progress.py  k10000000001_add_goals_to_custom_scenarios.py
apps/api/app/: main.py
apps/api/app/core/: auth0.py  config.py  cost_tracker.py  deps.py  logging_config.py  middleware.py  security.py
apps/api/app/db/: base.py  init_db.py  migrations.py  session.py  shadowing_seed_data.py
apps/api/app/prompts/: __init__.py  airport_checkin.py  apologize_delay.py  best_vacation.py  business_meeting.py  cafe_small_talk.py  common_rules.py  contract_negotiation_detail.py  conversation_system.py  custom_scenario.py  custom_scenario_goals_generation.py  customer_service.py  customer_survey_presentation.py  goal_progress_evaluation.py  guide_japan.py  hotel_checkin.py  immigration_customs.py  lost_wallet_police.py  online_negotiation.py  park_small_talk.py  reschedule_meeting.py  restaurant_ordering.py  review_listening_question.py  review_speaking_question.py  review_top_phrases_selection.py  run_meeting.py  scenario_goals.py  (+5 more)
apps/api/tests/: conftest.py  test_auth_flow.py  test_custom_scenario_prompts.py  test_custom_scenarios.py  test_google_tts_provider.py  test_groq_provider.py  test_prompt_mapping.py  test_review_evaluate_and_update.py  test_review_top_phrases.py  test_session_end_review_selection.py  test_shadowing.py
(+225 files in other folders)
